--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Positive Life Campaign</title>
+    <title>천국의 메시지: 긍정으로 가득한 삶</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
-            background: linear-gradient(to bottom, #87CEEB, #f0f8ff); /* Sky gradient */
+            background: linear-gradient(to bottom, #87CEEB, #f0f8ff); /* 하늘색 그라데이션 */
         }
 
         header {
@@ -17,7 +17,7 @@
             color: #333;
             padding: 20px;
             text-align: center;
-            z-index: 1; /* Ensures header is on top */
+            z-index: 1; /* 헤더가 위에 오도록 설정 */
             position: relative;
         }
 
@@ -25,7 +25,7 @@
             background: #ffddcc;
             padding: 10px;
             text-align: center;
-            z-index: 1; /* Ensures nav is on top */
+            z-index: 1; /* 내비게이션이 위에 오도록 설정 */
             position: relative;
         }
 
@@ -38,9 +38,9 @@
         section {
             padding: 20px;
             position: relative;
-            z-index: 1; /* Ensures section content is on top */
+            z-index: 1; /* 섹션 내용이 위에 오도록 설정 */
             background: #fff;
-            margin: 10vh auto; /* Adds space between sections */
+            margin: 10vh auto; /* 섹션 간 간격 추가 */
             width: 80%;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
@@ -52,8 +52,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            color: black; /* Changed to black */
-            font-size: 4em; /* Doubled the size */
+            color: black; /* 글씨 색을 검정색으로 변경 */
+            font-size: 4em; /* 글씨 크기를 2배로 설정 */
         }
 
         .positive-quote {
@@ -72,21 +72,21 @@
             position: fixed;
             bottom: 0;
             width: 100%;
-            z-index: 1; /* Ensures footer is on top */
+            z-index: 1; /* 푸터가 위에 오도록 설정 */
         }
 
         .container {
             position: absolute;
             width: 100vw;
-            height: 300vh; /* Increased height */
+            height: 300vh; /* 높이를 늘림 */
             overflow: hidden;
-            z-index: 2; /* Ensures container is behind images */
+            z-index: 2; /* 컨테이너가 이미지 뒤에 오도록 설정 */
         }
 
         .moving-image {
             position: absolute;
-            width: 10vw;
-            z-index: 3; /* Ensures images are on top */
+            width: 20vw;
+            z-index: 3; /* 이미지가 위에 오도록 설정 */
             cursor: pointer;
         }
 
@@ -98,91 +98,91 @@
             border-radius: 10px;
             width: 200px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            z-index: 4; /* Ensure speech bubble is on top */
+            z-index: 4; /* 말풍선이 위에 오도록 설정 */
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Positive Life Campaign</h1>
+        <h1>천국의 메시지: 긍정으로 가득한 삶</h1>
     </header>
     <nav>
-        <a href="#home">Home</a>
-        <a href="#our-story">Our Story</a>
-        <a href="#blog">Blog/Articles</a>
-        <a href="#community">Community Forum</a>
-        <a href="#events">Events & Activities</a>
-        <a href="#resources">Resources</a>
-        <a href="#contact">Contact & Join</a>
-        <a href="#guestbook">Guestbook</a>
+        <a href="#home">홈</a>
+        <a href="#our-story">우리의 이야기</a>
+        <a href="#blog">블로그/기사</a>
+        <a href="#community">커뮤니티 포럼</a>
+        <a href="#events">이벤트 및 활동</a>
+        <a href="#resources">리소스</a>
+        <a href="#contact">연락처 및 참여 방법</a>
+        <a href="#guestbook">방명록</a>
     </nav>
     <div class="container"></div>
 
     <section id="home">
         <div class="banner">
-            <div id="positive-quotes">Welcome to Positive Life Campaign</div>
+            <div id="positive-quotes">함께 긍정적인 세상을 만들어봐요!</div>
         </div>
         <div class="positive-quote" id="quote-container">
-            <!-- Quotes will appear here -->
+            <!— 인용구가 여기에 표시됩니다 —>
         </div>
     </section>
     <section id="our-story">
-        <h2>Our Story</h2>
-        <p>Our campaign started with a simple mission: to spread positivity and inspire people to live their best lives. Our vision is to create a supportive community where everyone can share their stories and uplift each other. We believe that through collective efforts and shared experiences, we can create a ripple effect of positivity that impacts the world.</p>
+        <h2>우리의 이야기</h2>
+        <p>우리의 캠페인은 단순한 사명으로 시작되었습니다: 긍정적인 태도를 퍼뜨리고 사람들이 최고의 삶을 살 수 있도록 영감을 주는 것입니다. 우리의 비전은 모든 사람이 자신의 이야기를 공유하고 서로를 격려할 수 있는 지원적인 커뮤니티를 만드는 것입니다. 우리는 공동의 노력과 공유된 경험을 통해 긍정의 물결이 세상에 영향을 미칠 수 있다고 믿습니다.</p>
     </section>
     <section id="blog">
-        <h2>Blog/Articles</h2>
+        <h2>블로그/기사</h2>
         <article>
-            <h3>Positive Living: A Success Story</h3>
-            <p>Read about Jane's journey to a positive life and how she overcame challenges with a smile. Jane's story is a testament to the power of a positive mindset. Despite facing numerous obstacles, she found strength and motivation through her community and personal resolve.</p>
+            <h3>긍정적인 삶: 성공 이야기</h3>
+            <p>제인의 긍정적인 삶을 향한 여정과 그녀가 웃음으로 어려움을 극복한 방법을 읽어보세요. 제인의 이야기는 긍정적인 사고방식의 힘을 입증합니다. 수많은 장애물을 마주했음에도 불구하고, 그녀는 커뮤니티와 개인의 결의를 통해 힘과 동기를 찾았습니다.</p>
         </article>
         <article>
-            <h3>Interview with Dr. Smith</h3>
-            <p>We sat down with Dr. Smith, a renowned psychologist, to discuss the benefits of a positive mindset. Dr. Smith shares practical tips and insights on how to cultivate positivity in daily life and the profound impact it can have on mental health.</p>
+            <h3>Dr. Smith와의 인터뷰</h3>
+            <p>우리는 긍정적인 사고방식의 이점을 논의하기 위해 유명 심리학자인 Dr. Smith와 자리를 가졌습니다. Dr. Smith는 일상 생활에서 긍정성을 키우는 방법과 그것이 정신 건강에 미치는 깊은 영향에 대해 실용적인 팁과 통찰을 공유합니다.</p>
         </article>
     </section>
     <section id="community">
-        <h2>Community Forum</h2>
-        <p>Share your experiences and support each other in our community forum. Together, we can make a difference! Join discussions, ask questions, and find encouragement from like-minded individuals who are also on a journey to live a positive life.</p>
+        <h2>커뮤니티 포럼</h2>
+        <p>우리의 커뮤니티 포럼에서 경험을 공유하고 서로를 지원하세요. 함께 우리는 변화를 만들 수 있습니다! 토론에 참여하고, 질문하고, 긍정적인 삶을 살기 위한 여정에 있는 같은 생각을 가진 사람들로부터 격려를 받으세요.</p>
     </section>
     <section id="events">
-        <h2>Events & Activities</h2>
-        <p>Join our upcoming events, workshops, and seminars to connect with like-minded individuals and learn more about living a positive life. Our events are designed to provide practical tools, inspiring stories, and a supportive community to help you thrive.</p>
+        <h2>이벤트 및 활동</h2>
+        <p>다가오는 이벤트, 워크숍, 세미나에 참여하여 같은 생각을 가진 사람들과 교류하고 긍정적인 삶을 사는 방법에 대해 더 알아보세요. 우리의 이벤트는 실용적인 도구, 영감을 주는 이야기, 그리고 여러분이 번성할 수 있도록 돕는 지원적인 커뮤니티를 제공합니다.</p>
     </section>
     <section id="resources">
-        <h2>Resources</h2>
-        <p>Discover books, videos, and podcasts that can help you cultivate a positive mindset and live a happier life. Our curated list of resources includes recommendations from experts and community members, ensuring you have access to the best materials to support your journey.</p>
+        <h2>리소스</h2>
+        <p>긍정적인 사고방식을 키우고 더 행복한 삶을 살 수 있도록 도와주는 책, 비디오, 팟캐스트를 발견하세요. 우리의 큐레이션된 리소스 목록은 전문가와 커뮤니티 구성원의 추천을 포함하여 여정에 도움을 줄 최고의 자료에 접근할 수 있도록 합니다.</p>
     </section>
     <section id="contact">
-        <h2>Contact & Join</h2>
-        <p>If you want to get involved with our campaign, please reach out to us at contact@positivelifecampaign.com or fill out the form below. We welcome new members and volunteers who are passionate about spreading positivity and making a difference.</p>
+        <h2>연락처 및 참여 방법</h2>
+        <p>우리의 캠페인에 참여하고 싶다면 contact@positivelifecampaign.com으로 연락하거나 아래 양식을 작성해주세요. 우리는 긍정을 퍼뜨리고 변화를 만들기를 열망하는 새로운 회원과 자원봉사자를 환영합니다.</p>
         <form>
-            <label for="name">Name:</label>
+            <label for="name">이름:</label>
             <input type="text" id="name" name="name" required><br>
-            <label for="email">Email:</label>
+            <label for="email">이메일:</label>
             <input type="email" id="email" name="email" required><br>
-            <label for="message">Message:</label><br>
+            <label for="message">메시지:</label><br>
             <textarea id="message" name="message" rows="4" required></textarea><br>
-            <input type="submit" value="Submit">
+            <input type="submit" value="제출">
         </form>
     </section>
     <section id="guestbook">
         <div class="guestbook">
-            <h2>Guestbook</h2>
+            <h2>방명록</h2>
             <form id="guestbook-form">
-                <label for="guest-name">Name:</label>
+                <label for="guest-name">이름:</label>
                 <input type="text" id="guest-name" name="guest-name" required>
-                <label for="guest-message">Your Positive Commitment:</label>
+                <label for="guest-message">긍정적인 다짐:</label>
                 <textarea id="guest-message" name="guest-message" rows="4" required></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit">제출</button>
             </form>
             <div class="guestbook-messages" id="guestbook-messages">
-                <!-- Submitted messages will appear here -->
+                <!— 제출된 메시지가 여기에 표시됩니다 —>
             </div>
         </div>
     </section>
     <footer>
-        <p>&copy; 2023 Positive Life Campaign. All rights reserved.</p>
+        <p>&copy; 2023 긍정적인 삶 캠페인. All rights reserved.</p>
     </footer>
 
     <script>
@@ -266,23 +266,23 @@
         ];
 
         const messages = [
-            "Keep going!",
-            "You are amazing!",
-            "Believe in yourself!",
-            "Stay positive!"
+            "계속 나아가세요!",
+            "당신은 멋져요!",
+            "자신을 믿으세요!",
+            "긍정적으로 생활하세요!"
         ];
 
         const quotes = [
-            "You are capable of amazing things.",
-            "Believe in yourself and all that you are.",
-            "Positivity always wins.",
-            "Stay positive, work hard, make it happen.",
-            "You are stronger than you think.",
-            "Your only limit is your mind.",
-            "Good things take time.",
-            "Keep going, keep growing.",
-            "Dream it, believe it, achieve it.",
-            "The best time for new beginnings is now."
+            "당신은 놀라운 일을 해낼 수 있습니다.",
+            "자신과 당신이 할 수 있는 모든 것을 믿으세요.",
+            "긍정적인 태도가 항상 승리합니다.",
+            "긍정적인 마음으로 열심히 일하고, 이루어내세요.",
+            "당신은 생각보다 강합니다.",
+            "당신의 유일한 한계는 마음입니다.",
+            "좋은 일은 시간이 걸립니다.",
+            "계속 나아가고, 계속 성장하세요.",
+            "꿈을 꾸고, 믿고, 이루세요.",
+            "새로운 시작을 위한 최고의 시간은 지금입니다."
         ];
 
         let quoteIndex = 0;
@@ -293,13 +293,13 @@
             quoteIndex = (quoteIndex + 1) % quotes.length;
         }
 
-        setInterval(changeQuote, 10000); // Change quote every 10 seconds
-        changeQuote(); // Set initial quote
+        setInterval(changeQuote, 10000); // 10초마다 인용구 변경
+        changeQuote(); // 초기 인용구 설정
 
         characterImages.forEach((src, i) => {
             const img = document.createElement('img');
             img.src = src;
-            img.alt = `Character ${i + 1}`;
+            img.alt = `캐릭터 ${i + 1}`;
             img.classList.add('moving-image');
             img.style.left = `${getRandomPosition().x}vw`;
             img.style.top = `${getRandomPosition().y}vh`;
@@ -312,7 +312,7 @@
         objectImages.forEach((src, i) => {
             const img = document.createElement('img');
             img.src = src;
-            img.alt = `Object ${i + 1}`;
+            img.alt = `오브제 ${i + 1}`;
             img.classList.add('moving-image');
             img.style.left = `${getRandomPosition().x}vw`;
             img.style.top = `${getRandomPosition().y}vh`;
@@ -325,10 +325,10 @@
             const bubble = document.createElement('div');
             bubble.classList.add('speech-bubble');
             const rect = img.getBoundingClientRect();
-            bubble.style.left = `${rect.left + window.scrollX}px`; // Adjusted to account for scroll position
-            bubble.style.top = `${rect.bottom + window.scrollY}px`; // Adjusted to account for scroll position
+            bubble.style.left = `${rect.left + window.scrollX}px`; // 스크롤 위치를 고려하여 조정
+            bubble.style.top = `${rect.bottom + window.scrollY}px`; // 스크롤 위치를 고려하여 조정
             bubble.textContent = messages[getRandomInt(messages.length)];
-            document.body.appendChild(bubble);
+            document.body.appendChild(풍선껌);
             setTimeout(() => bubble.remove(), 3000);
         }
 
